--- a/admin/pages/index.ejs
+++ b/admin/pages/index.ejs
@@ -12,54 +12,104 @@
 <body class="container mt-5">
     <h1>Ingestion Engine Control Panel</h1>
 
-    <h2 class="mt-4">Cracked Scripts</h2>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckAccCracked">
-        <label class="form-check-label" for="flexSwitchCheckAccCracked">Run acc_cracked.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCrackedCombo">
-        <label class="form-check-label" for="flexSwitchCheckCrackedCombo">Run cracked_combo.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCrackedHire">
-        <label class="form-check-label" for="flexSwitchCheckCrackedHire">Run cracked_hire.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCrackedSource">
-        <label class="form-check-label" for="flexSwitchCheckCrackedSource">Run cracked.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckProductsCracked">
-        <label class="form-check-label" for="flexSwitchCheckProductsCracked">Run products_cracked.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckServiceCracked">
-        <label class="form-check-label" for="flexSwitchCheckServiceCracked">Run service_cracked.py</label>
-    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class="mt-4">Cracked Scripts</h2>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckAccCracked">
+                <label class="form-check-label" for="flexSwitchCheckAccCracked">Run acc_cracked.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCrackedCombo">
+                <label class="form-check-label" for="flexSwitchCheckCrackedCombo">Run cracked_combo.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCrackedHire">
+                <label class="form-check-label" for="flexSwitchCheckCrackedHire">Run cracked_hire.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckCrackedSource">
+                <label class="form-check-label" for="flexSwitchCheckCrackedSource">Run cracked.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckProductsCracked">
+                <label class="form-check-label" for="flexSwitchCheckProductsCracked">Run products_cracked.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckServiceCracked">
+                <label class="form-check-label" for="flexSwitchCheckServiceCracked">Run service_cracked.py</label>
+            </div>
 
-    <h2 class="mt-4">Breach Forum Scripts</h2>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckBreachAcc">
-        <label class="form-check-label" for="flexSwitchCheckBreachAcc">Run cracked_acc.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDatabases">
-        <label class="form-check-label" for="flexSwitchCheckDatabases">Run databases.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOtherLeaks">
-        <label class="form-check-label" for="flexSwitchCheckOtherLeaks">Run other_leaks.py</label>
-    </div>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckStealer">
-        <label class="form-check-label" for="flexSwitchCheckStealer">Run stealer.py</label>
-    </div>
+            <h2 class="mt-4">Breach Forum Scripts</h2>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckBreachAcc">
+                <label class="form-check-label" for="flexSwitchCheckBreachAcc">Run cracked_acc.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDatabases">
+                <label class="form-check-label" for="flexSwitchCheckDatabases">Run databases.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOtherLeaks">
+                <label class="form-check-label" for="flexSwitchCheckOtherLeaks">Run other_leaks.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckStealer">
+                <label class="form-check-label" for="flexSwitchCheckStealer">Run stealer.py</label>
+            </div>
 
-    <h2 class="mt-4">Doxbin Script</h2>
-    <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDoxbin">
-        <label class="form-check-label" for="flexSwitchCheckDoxbin">Run doxbin.py</label>
+            <h2 class="mt-4">Doxbin Script</h2>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDoxbin">
+                <label class="form-check-label" for="flexSwitchCheckDoxbin">Run doxbin.py</label>
+            </div>
+        </div>
+
+        <div class="col-md-6">
+            <h2 class="mt-4">Nulled Scripts</h2>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckNulledAcc">
+                <label class="form-check-label" for="flexSwitchCheckNulledAcc">Run nulled_acc.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckNulledCombo">
+                <label class="form-check-label" for="flexSwitchCheckNulledCombo">Run nulled_combo.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckNulledDbs">
+                <label class="form-check-label" for="flexSwitchCheckNulledDbs">Run nulled_dbs.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckNulledProds">
+                <label class="form-check-label" for="flexSwitchCheckNulledProds">Run nulled_prods.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckNulledSource">
+                <label class="form-check-label" for="flexSwitchCheckNulledSource">Run nulled_source.py</label>
+            </div>
+
+            <h2 class="mt-4">Onni Forums Scripts</h2>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOnniDbs">
+                <label class="form-check-label" for="flexSwitchCheckOnniDbs">Run onni_dbs.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOnniHack">
+                <label class="form-check-label" for="flexSwitchCheckOnniHack">Run onni_hack.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOnniOpsec">
+                <label class="form-check-label" for="flexSwitchCheckOnniOpsec">Run onni_opsec.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOnniOther">
+                <label class="form-check-label" for="flexSwitchCheckOnniOther">Run onni_other.py</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckOnniPrem">
+                <label class="form-check-label" for="flexSwitchCheckOnniPrem">Run onni_prem.py</label>
+            </div>
+        </div>
     </div>
 
     <script>
@@ -76,6 +126,16 @@
                 { id: 'flexSwitchCheckOtherLeaks', endpoint: '/breached/other_leaks' },
                 { id: 'flexSwitchCheckStealer', endpoint: '/breached/stealer' },
                 { id: 'flexSwitchCheckDoxbin', endpoint: '/doxbin/doxbin' },
+                { id: 'flexSwitchCheckNulledAcc', endpoint: '/nulled/acc' },
+                { id: 'flexSwitchCheckNulledCombo', endpoint: '/nulled/combo' },
+                { id: 'flexSwitchCheckNulledDbs', endpoint: '/nulled/dbs' },
+                { id: 'flexSwitchCheckNulledProds', endpoint: '/nulled/prods' },
+                { id: 'flexSwitchCheckNulledSource', endpoint: '/nulled/source' },
+                { id: 'flexSwitchCheckOnniDbs', endpoint: '/onni/dbs' }, // New endpoint for Onni
+                { id: 'flexSwitchCheckOnniHack', endpoint: '/onni/hack' }, // New endpoint for Onni
+                { id: 'flexSwitchCheckOnniOpsec', endpoint: '/onni/opsec' }, // New endpoint for Onni
+                { id: 'flexSwitchCheckOnniOther', endpoint: '/onni/other' }, // New endpoint for Onni
+                { id: 'flexSwitchCheckOnniPrem', endpoint: '/onni/prem' }, // New endpoint for Onni
             ];
 
             switches.forEach(({ id, endpoint }) => {
