Frontend Prisma integrations

--- a/admin/pages/index.ejs
+++ b/admin/pages/index.ejs
@@ -123,7 +123,7 @@
                 { id: 'flexSwitchCheckServiceCracked', endpoint: '/cracked/service' },
                 { id: 'flexSwitchCheckBreachAcc', endpoint: '/breached/acc' },
                 { id: 'flexSwitchCheckDatabases', endpoint: '/breached/databases' },
-                { id: 'flexSwitchCheckOtherLeaks', endpoint: '/breached/other_leaks' },
+                { id: 'flexSwitchCheckOtherLeaks', endpoint: '/breached/other-leaks' },
                 { id: 'flexSwitchCheckStealer', endpoint: '/breached/stealer' },
                 { id: 'flexSwitchCheckDoxbin', endpoint: '/doxbin/doxbin' },
                 { id: 'flexSwitchCheckNulledAcc', endpoint: '/nulled/acc' },
